--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,13 +1,3 @@
-/**
-* Template Name: iPortfolio - v3.10.0
-* Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
 body {
   font-family: "Open Sans", sans-serif;
   color: #272829;
@@ -228,9 +218,16 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background-image: url("../img/tamalsen-home-cover.jpg");
+   background-position: center;
+  background-repeat: no-repeat;
   background-size: cover;
-}
+  position: relative;
+  background-origin: content-box;
+  background-clip: padding-box;
+
+} 
+
 
 #hero:before {
   content: "";
@@ -255,6 +252,11 @@ h6 {
   font-weight: 700;
   line-height: 56px;
   color: #fff;
+}
+#hero h3 {
+
+  color: white;
+
 }
 
 #hero p {
@@ -417,7 +419,7 @@ section {
 }
 
 /*--------------------------------------------------------------
-# Akills
+# Skills
 --------------------------------------------------------------*/
 .skills .progress {
   height: 60px;
@@ -453,6 +455,22 @@ section {
   background-color: #149ddd;
 }
 
+.grid-container {
+  display: grid;
+  grid-template-columns: 70px 70px 70px; /*Make the grid smaller than the container*/
+  gap: 10px;
+  background-color: dodgerblue;
+  padding: 10px;
+  justify-content: center;
+}
+
+.grid-container > div {
+  background-color: #f1f1f1;
+  color:#000;
+  padding: 10px;
+  font-size: 30px;
+  text-align: center;
+}
 /*--------------------------------------------------------------
 # Resume
 --------------------------------------------------------------*/
@@ -475,7 +493,7 @@ section {
   line-height: 18px;
   font-size: 18px;
   font-weight: 600;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-family: "Poppins", sans-serif;
   color: #050d18;
   margin-bottom: 10px;
