--- a/templates/project.html
+++ b/templates/project.html
@@ -18,15 +18,15 @@
                 
       
                 <div class="swiper-slide">
-                  <img src="static/img/portfolio/portfolio-details-1.jpg" alt="">
+                  <img src="static/img/portfolio/portfolio-details-1.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="static/img/portfolio/portfolio-details-2.jpg" alt="">
+                  <img src="static/img/portfolio/portfolio-details-2.png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="static/img/portfolio/portfolio-details-3.jpg" alt="">
+                  <img src="static/img/portfolio/portfolio-details-3.png" alt="">
                 </div>
 
               </div>
@@ -59,7 +59,13 @@
       </div>
     </section>
 
+
+  <div class="h-100 d-flex align-items-end justify-content-end py-3">
+<a href="javascript:history.go(-1)" class="btn btn-outline-blue rounded-pill mb-5" >Back</a>    
+  </div>
+ 
       
+    
     <svg class="svg-curve" viewBox="0 0 1440 79" xmlns="http://www.w3.org/2000/svg">
       <path d="M-100 0C-100 0 218.416 55.835 693.5 55.835C1168.58 55.835 1487 0 1487 0V79H-100V0Z"></path>
     </svg>
