--- a/templates/home.html
+++ b/templates/home.html
@@ -158,7 +158,6 @@
         <div class="row skills-content">
 
           <div class="col-lg-6" data-aos="fade-up">
-
              <div class="progress">
               <span class="skill">Python <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
@@ -170,8 +169,7 @@
             <div class="progress">
               <span class="skill">HTML <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                </div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -187,7 +185,6 @@
 
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
            <div class="progress">
               <span class="skill">CSS <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
@@ -212,13 +209,8 @@
                 </div>
               </div>
             </div>
-
-            
-
           </div>
-
         </div>
-
       </div>
     </section><!-- End Skills Section -->
 
@@ -292,54 +284,52 @@
             <i class="fas fa-download"></i> Contact Me
           </a>
         </div>
-
-
-
       </div>
     </section><!-- End Resume Section -->
 
-          <!-- ======= Portfolio Section ======= -->
-          <section id="portfolio" class="portfolio section-bg">
-            <div class="container">
+    <!-- ======= Portfolio Section ======= -->
+    <section id="portfolio" class="portfolio section-bg">
+      <div class="container">
 
-              <div class="section-title">
-                <h2>Projects</h2>
+        <div class="section-title">
+          <h2>Projects</h2>
+        </div>
+
+        <div class="row" data-aos="fade-up">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <ul id="portfolio-flters">
+              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-card">Django</li>
+              <li data-filter=".filter-web">Python</li>
+              <li data-filter=".filter-web">JavaScript</li>
+              <li data-filter=".filter-web">Bootstrap</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap" >
+              <img src="{% static 'img/portfolio/Portfolio.jpeg' %}" class="img-fluid" alt="portfolio" style="height: 30vh; width: 20vw; object-fit:contain;">
+            
+              <div class="portfolio-links">
+                <a href="{% static 'img/portfolio/Portfolio.jpeg' %}" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="My portfolio" ><i class="bx bx-plus"></i></a>
+                <a href="{% url 'project' %}" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/elaiyarani-s/MyPortfolio.git" title="GitHub"><i class="bi bi-github"></i></a>
               </div>
+            </div>
+          </div>
+        
 
-              <div class="row" data-aos="fade-up">
-                <div class="col-lg-12 d-flex justify-content-center">
-                  <ul id="portfolio-flters">
-                    <li data-filter="*" class="filter-active">All</li>
-                    <li data-filter=".filter-card">Django</li>
-                    <li data-filter=".filter-web">Python</li>
-                    <li data-filter=".filter-web">JavaScript</li>
-                    <li data-filter=".filter-web">Bootstrap</li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
-
-                <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-                  <div class="portfolio-wrap" style="height: 30vh; width: 20vw; object-fit: cover;">
-                    <img src="{% static 'img/portfolio/Portfolio.jpeg' %}" class="img-fluid" alt="portfolio" style="height: 30vh; width: 10vw; object-fit: contain;">
-                  
-                    <div class="portfolio-links">
-                      <a href="{% static 'img/portfolio/Portfolio.jpeg' %}" data-gallery="portfolioGallery"
-                        class="portfolio-lightbox" title="My portfolio" ><i class="bx bx-plus"></i></a>
-                      <a href="{% url 'project' %}" title="More Details"><i class="bx bx-link"></i></a>
-                      <a href="https://github.com/elaiyarani-s" title="GitHub"><i class="bi bi-github"></i></a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
                   <div class="portfolio-wrap">
-                    <img src="{% static 'img/portfolio/portfolio-2.jpg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'img/portfolio/RehaIT.png' %}" class="img-fluid" alt="reha_radio" style="height: 30vh; width: 15vw; object-fit:contain;">
                     <div class="portfolio-links">
-                      <a href="{% static 'img/portfolio/portfolio-2.jpg' %}" data-gallery="portfolioGallery"
-                        class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                      <a href="/project" title="More Details"><i class="bx bx-link"></i></a>
+                      <a href="{% static 'img/portfolio/RehaIT.png' %}" data-gallery="portfolioGallery"
+                        class="portfolio-lightbox" title="REHA radio"><i class="bx bx-plus"></i></a>
+                      <a href="{% url 'project' %}"  title="More Details"><i class="bx bx-link"></i></a>
+                      <a href="https://github.com/elaiyarani-s/REHA_radio.git" title="GitHub"><i class="bi bi-github"></i></a>
                     </div>
                   </div>
                 </div>
@@ -421,10 +411,9 @@
                   </div>
                 </div>
 
-              </div>
-
-            </div>
-          </section><!-- End Portfolio Section -->
+        </div>
+      </div>
+    </section><!-- End Portfolio Section -->
 
           <!-- ======= Contact Section ======= -->
           <section id="contact" class="contact">
