--- a/templates/home.html
+++ b/templates/home.html
@@ -329,23 +329,25 @@
                       <a href="{% static 'img/portfolio/RehaIT.png' %}" data-gallery="portfolioGallery"
                         class="portfolio-lightbox" title="REHA radio"><i class="bx bx-plus"></i></a>
                       <a href="{% url 'project' %}"  title="More Details"><i class="bx bx-link"></i></a>
-                      <a href="https://github.com/elaiyarani-s/REHA_radio.git" title="GitHub"><i class="bi bi-github"></i></a>
+                      <a href="https://github.com/elaiyarani-s/SkillSwap.git" title="GitHub"><i class="bi bi-github"></i></a>
                     </div>
                   </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                   <div class="portfolio-wrap">
-                    <img src="{% static 'img/portfolio/portfolio-3.jpg' %}" class="img-fluid" alt="">
+                    <img src="{% static 'img/portfolio/skillswap.png' %}" class="img-fluid" alt="skillswap" style="height: 30vh; width: 15vw; object-fit:contain;">
                     <div class="portfolio-links">
-                      <a href="{% static 'img/portfolio/portfolio-3.jpg' %}" data-gallery="portfolioGallery"
-                        class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
-                      <a href="/project" title="More Details"><i class="bx bx-link"></i></a>
+                      <a href="{% static 'img/portfolio/skillswap.png' %}" data-gallery="portfolioGallery"
+                        class="portfolio-lightbox" title="SkillSwap"><i class="bx bx-plus"></i></a>
+                      <a href="{% url 'project' %}"  title="More Details"><i class="bx bx-link"></i></a>
+                      <a href="https://github.com/elaiyarani-s/REHA_radio.git" title="GitHub"><i class="bi bi-github"></i></a>
+
                     </div>
                   </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+                <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                   <div class="portfolio-wrap">
                     <img src="{% static 'img/portfolio/portfolio-4.jpg' %}" class="img-fluid" alt="">
                     <div class="portfolio-links">
@@ -409,7 +411,7 @@
                       <a href="{% url 'project' %}" title="More Details"><i class="bx bx-link"></i></a>
                     </div>
                   </div>
-                </div>
+                </div> -->
 
         </div>
       </div>
