--- a/templates/project.html
+++ b/templates/project.html
@@ -8,55 +8,9 @@
 
 
  <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="col-lg-8">
-            <div class="portfolio-details-slider swiper">
-              <div class="swiper-wrapper align-items-center">
-                
-      
-                <div class="swiper-slide">
-                  <img src="static/img/portfolio/portfolio-details-1.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="static/img/portfolio/portfolio-details-2.png" alt="">
-                </div>
-
-                <div class="swiper-slide">
-                  <img src="static/img/portfolio/portfolio-details-3.png" alt="">
-                </div>
-
-              </div>
-              <div class="swiper-pagination"></div>
-            </div>
-          </div>
-
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h3>Project information</h3>
-              <ul>
-                <li><strong>Category</strong>: Website Developemnt</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="https://elaiyarani-s.github.io/MyPortfolio/">MyPortfolio</a></li>
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h2>My Personal Portfolio</h2>
-              <ul>
-                <li>Developed a personal portfolio website using Javascript, HTML, CSS and Bootstrap 5.</li>
-                <li>The webpage uses dynamic cards that injects data from the javascript files in the experience and project sections</li>
-                <li>Dark/light theme toggle</li>
-                <li>Responsive across all screens</li>
-              </ul>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
+      <div class="container" id="project1"></div>
+<div class="container" id="project2"></div>
+<div class="container" id="project3"></div>
     </section>
 
 
