--- a/templates/index.html
+++ b/templates/index.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+      <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-        <title>{% block title %} Developer Elaiyarani {% endblock %}</title>
-        <meta content="" name="description" />
-        <meta content="" name="keywords" />
+    <title>{% block title %} Developer Elaiyarani {% endblock %}</title>
+    <meta content="" name="description" />
+    <meta content="" name="keywords" />
 
-        <!-- Favicons -->
-        <link href="{% static 'img/favicon.png' %}" rel="icon" />
-        <link href="{% static 'img/apple-touch-icon.png' %}" rel="apple-touch-icon" />
+    <!-- Favicons -->
+    <link href="{% static 'img/favicon.png' %}" rel="icon" />
+    <link href="{% static 'img/apple-touch-icon.png' %}" rel="apple-touch-icon" />
 
-        <!-- Google Fonts -->
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Raleway:300,400,500,600,700|Poppins:300,400,500,600,700" rel="stylesheet" />
 
-        <!-- Vendor CSS Files -->
-        <link href="{% static 'vendor/aos/aos.css' %}" rel="stylesheet" />
-        <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" />
-        <link href="{% static 'vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet" />
-        <link href="{% static 'vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet" />
-        <link href="{% static 'vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet" />
-        <link href="{% static 'vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet" />
-        <!-- BootStrap Link-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
+    <!-- Vendor CSS Files -->
+    <link href="{% static 'vendor/aos/aos.css' %}" rel="stylesheet" />
+    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet" />
+    <link href="{% static 'vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet" />
+    <link href="{% static 'vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet" />
 
-        <!-- Template Main CSS File -->
-        <link href="{% static 'css/style.css' %}" rel="stylesheet" />
-    </head>
+    <!-- Template Main CSS File -->
+    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
+  </head>
 
     <body>
         <!-- ======= Mobile nav toggle button ======= -->
@@ -156,7 +154,6 @@
                                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
-                        </div>
 
                         <div class="progress">
                             <span class="skill">HTML <i class="val">80%</i></span>
@@ -171,6 +168,9 @@
                                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
+
+                        </div>
+
 
                         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                             <div class="progress">
@@ -261,10 +261,10 @@
                         </div>
                     </div>
                     <div class="text-center">
-                        <a class="btn btn-primary download-button col text-center" href="{% static 'resume/eSou.pdf' %}" target="_blank"> <i class="fas fa-download"></i> Download Resume </a>
+                        <a class="btn btn-outline-blue download-button col text-center" href="{% static 'resume/eSou.pdf' %}" target="_blank"> <i class="fas fa-download"></i> Download Resume </a>
                     </div>
                     <div class="text-center my-3">
-                        <a class="btn btn-primary download-button col text-center" href="#contact"> <i class="fas fa-download"></i> Contact Me </a>
+                        <a class="btn btn-outline-blue download-button col text-center" href="#contact"> <i class="fas fa-download"></i> Contact Me </a>
                     </div>
                 </div>
             </section>
@@ -290,13 +290,88 @@
                     </div>
 
                     <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+  {% for project in projects %}
+  <div class="col-lg-4 col-md-6 portfolio-item {% for tag in project.tags.all %}tag-{{ tag.name|slugify }} {% endfor %}">
+    <div class="portfolio-wrap">
+      {% if project.images.first %}
+      <img src="{{ project.images.first.image.url }}" class="img-fluid"
+        alt="{{ project.title }}" style="height: 30vh; width: 100%; object-fit: contain;" />
+      {% endif %}
+
+      <div class="portfolio-links">
+        {% if project.images.first %}
+        <a href="{{ project.images.first.image.url }}" data-gallery="portfolioGallery"
+          class="portfolio-lightbox" title="{{ project.title }}">
+          <i class="bx bx-plus"></i>
+        </a>
+        {% endif %}
+        <a href="#" data-bs-toggle="modal" data-bs-target="#projectModal{{ forloop.counter }}"
+          title="More Details">
+          <i class="bx bx-link"></i>
+        </a>
+        {% if project.github_link %}
+        <a href="{{ project.github_link }}" target="_blank" title="GitHub">
+          <i class="bi bi-github"></i>
+        </a>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal fade" id="projectModal{{ forloop.counter }}" tabindex="-1"
+    aria-labelledby="projectModalLabel{{ forloop.counter }}" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="projectModalLabel{{ forloop.counter }}">{{ project.title }}</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-lg-7">
+              <div class="row g-2">
+                {% for image in project.images.all %}
+                <div class="col-6">
+                  <a href="{{ image.image.url }}" class="glightbox">
+                    <img src="{{ image.image.url }}" class="img-fluid rounded" alt="{{ project.title }} image" />
+                  </a>
+                </div>
+                {% endfor %}
+              </div>
+            </div>
+            <div class="col-lg-5">
+              <h6>Description</h6>
+              <p>{{ project.description }}</p>
+              <ul class="list-unstyled">
+                {% if project.github_link %}
+                <li><strong>GitHub:</strong> <a href="{{ project.github_link }}" target="_blank">{{ project.github_link }}</a></li>
+                {% endif %}
+                {% if project.detail_url %}
+                <li><strong>Live Site:</strong> <a href="{{ project.detail_url }}" target="_blank">{{ project.detail_url }}</a></li>
+                {% endif %}
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+</div>
+{% comment %} 
+<!-- 
+                    <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
                         <div class="col-lg-4 col-md-6 portfolio-item filter-app">
                             <div class="portfolio-wrap">
                                 <img src="{% static 'img/portfolio/Portfolio.jpeg' %}" class="img-fluid" alt="portfolio" style="height: 30vh; width: 20vw; object-fit: contain;" />
 
                                 <div class="portfolio-links">
                                     <a href="{% static 'img/portfolio/Portfolio.jpeg' %}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="My portfolio"><i class="bx bx-plus"></i></a>
-                                    <a href="{% url 'project' %}" title="More Details"><i class="bx bx-link"></i></a>
+<a href="#" data-bs-toggle="modal" data-bs-target="#projectModal{{ forloop.counter }}" title="More Details">
+  <i class="bx bx-link"></i>
+</a>
+
                                     <a href="https://github.com/elaiyarani-s/MyPortfolio.git" title="GitHub"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
@@ -307,8 +382,10 @@
                                 <img src="{% static 'img/portfolio/RehaIT.png' %}" class="img-fluid" alt="reha_radio" style="height: 30vh; width: 15vw; object-fit: contain;" />
                                 <div class="portfolio-links">
                                     <a href="{% static 'img/portfolio/RehaIT.png' %}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="REHA radio"><i class="bx bx-plus"></i></a>
-                                    <a href="{% url 'project' %}" title="More Details"><i class="bx bx-link"></i></a>
-                                    <a href="https://github.com/elaiyarani-s/SkillSwap.git" title="GitHub"><i class="bi bi-github"></i></a>
+<a href="#" data-bs-toggle="modal" data-bs-target="#projectModal2" title="More Details">
+  <i class="bx bx-link"></i>
+</a>
+                                    <a href="https://github.com/elaiyarani-s/REHA_radio.git" title="GitHub"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -318,11 +395,13 @@
                                 <img src="{% static 'img/portfolio/skillswap.png' %}" class="img-fluid" alt="skillswap" style="height: 30vh; width: 15vw; object-fit: contain;" />
                                 <div class="portfolio-links">
                                     <a href="{% static 'img/portfolio/skillswap.png' %}" data-gallery="portfolioGallery" class="portfolio-lightbox" title="SkillSwap"><i class="bx bx-plus"></i></a>
-                                    <a href="{% url 'project' %}" title="More Details"><i class="bx bx-link"></i></a>
-                                    <a href="https://github.com/elaiyarani-s/REHA_radio.git" title="GitHub"><i class="bi bi-github"></i></a>
+<a href="#" data-bs-toggle="modal" data-bs-target="#projectModal3" title="More Details">
+  <i class="bx bx-link"></i>
+</a>
+                                    <a href="https://github.com/elaiyarani-s/SkillSwap.git" title="GitHub"><i class="bi bi-github"></i></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
                   <div class="portfolio-wrap">
@@ -388,7 +467,7 @@
                       <a href="{% url 'project' %}" title="More Details"><i class="bx bx-link"></i></a>
                     </div>
                   </div>
-                </div> -->
+                </div> --> {% endcomment %}
                     </div>
                 </div>
             </section>
@@ -398,7 +477,7 @@
             <section id="contact" class="contact">
                 <div class="container">
                     <div class="section-title">
-                        <h2>Contact</h2>
+                        <h2 class="justify-content">Contact</h2>
                         <p>
                             Thank you for visiting and spending your valuable time with us. I hope you found what you were looking for. I am always open to work on challenging operations and put my skills to use. If you are in need of
                             someone with my skills and experience, please don't hesitate to contact me. I am confident that I can contribute value to your team and help achieve your business goals. Thank you again for visiting . I am look
@@ -412,7 +491,7 @@
                                 <div class="address">
                                     <i class="bi bi-geo-alt"></i>
                                     <h4>Location:</h4>
-                                    <p>Vijayawada, Andhra Predesh, India 521137.</p>
+                                    <p>Stockholm, Sweden.</p>
                                 </div>
 
                                 <div class="email">
@@ -424,14 +503,14 @@
                                 <div class="phone">
                                     <i class="bi bi-phone"></i>
                                     <h4>Call:</h4>
-                                    <p>+91 7036 0372 03</p>
+                                    <p>+46769780854</p>
                                 </div>
-
+<!-- 
                                 <div class="skype">
                                     <i class="bi bi-skype"></i>
                                     <h4>Skype:</h4>
                                     <p>+91 7036 0372 03</p>
-                                </div>
+                                </div> -->
 
                                 <div class="linkedin">
                                     <i class="bi bi-linkedin"></i>
@@ -442,7 +521,7 @@
                         </div>
 
                         <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
-                            <form action="/#contact" method="post" class="php-email-form">
+                            <!-- <form action="/#contact" method="post" class="php-email-form">
                                 {% csrf_token %}
                                 <div class="row">
                                     <div class="form-group col-md-6">
@@ -470,7 +549,44 @@
                                     <div class="sent-message">Your message has been sent. Thank you!</div>
                                 </div>
                                 <div class="text-center"><button type="submit" class="btn btn-primary">submit</button></div>
+                            </form> -->
+
+                            <!-- <form method="POST" action="#contact">
+                              {% csrf_token %}
+                              {{ form.as_p }}
+                              <button type="submit" class="btn btn-primary">Send Message</button>
+                            </form> -->
+
+                            <form method="POST" action="#contact">
+                              {% csrf_token %}
+
+                              <div class="mb-3">
+                                {{ form.name.label_tag }}
+                                {{ form.name }}
+                                {{ form.name.errors }}
+                              </div>
+
+                              <div class="mb-3">
+                                {{ form.email.label_tag }}
+                                {{ form.email }}
+                                {{ form.email.errors }}
+                              </div>
+
+                              <div class="mb-3">
+                                {{ form.subject.label_tag }}
+                                {{ form.subject }}
+                                {{ form.subject.errors }}
+                              </div>
+
+                              <div class="mb-3">
+                                {{ form.message.label_tag }}
+                                {{ form.message }}
+                                {{ form.message.errors }}
+                              </div>
+
+                              <button type="submit" class="btn btn-outline-blue">Send Message</button>
                             </form>
+
                         </div>
                     </div>
                 </div>
@@ -494,21 +610,24 @@
         <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
         <!-- Vendor JS Files -->
-        <script src="{% static 'vendor/purecounter/purecounter_vanilla.js' %}"></script>
-        <script src="{% static 'vendor/aos/aos.js' %}"></script>
-        <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-        <script src="{% static 'vendor/glightbox/js/glightbox.min.js' %}"></script>
-        <script src="{% static 'vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
-        <script src="{% static 'vendor/swiper/swiper-bundle.min.js' %}"></script>
-        <script src="{% static 'vendor/typed.js/typed.min.js' %}"></script>
-        <script src="{% static 'vendor/waypoints/noframework.waypoints.js' %}"></script>
-        <script src="{% static 'vendor/php-email-form/validate.js' %}"></script>
+    <script src="{% static 'vendor/purecounter/purecounter_vanilla.js' %}"></script>
+    <script src="{% static 'vendor/aos/aos.js' %}"></script>
+    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'vendor/glightbox/js/glightbox.min.js' %}"></script>
+    <script src="{% static 'vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
+    <script src="{% static 'vendor/swiper/swiper-bundle.min.js' %}"></script>
+    <script src="{% static 'vendor/typed.js/typed.min.js' %}"></script>
+    <script src="{% static 'vendor/waypoints/noframework.waypoints.js' %}"></script>
+    <script src="{% static 'vendor/php-email-form/validate.js' %}"></script>
 
-        <!--Boot Strap link-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
-        <!-- Template Main JS File -->
-        <script src="{% static 'js/main.js' %}"></script>
+    <!-- GLightbox Init -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        GLightbox({ selector: '.glightbox' });
+      });
+    </script>
+
+    <!-- Template Main JS File -->
+    <script src="{% static 'js/main.js' %}"></script>
     </body>
 </html>
