--- a/templates/project.html
+++ b/templates/project.html
@@ -1,23 +1,81 @@
-{% extends 'home.html' %} 
+{% extends 'index.html' %} 
 {% load static %} 
 {% block title %}My Projects{% endblock %} 
 {% block content %}
-<svg class="svg-curve" viewBox="0 0 1440 79" xmlns="http://www.w3.org/2000/svg">
-    <path d="M-100 79C-100 79 218.416 23.165 693.5 23.165C1168.58 23.165 1487 79 1487 79V0H-100V79Z"></path>
-</svg>
 
-<section id="portfolio-details" class="portfolio-details">
-    <div class="container" id="project1"></div>
-    <div class="container" id="project2"></div>
-    <div class="container" id="project3"></div>
-</section>
+<div class="text-center mb-4">
+  <ul id="portfolio-flters" class="list-inline">
+    <li class="list-inline-item filter-active" data-filter="*">All</li>
+    {% for tag in tags %}
+    <li class="list-inline-item" data-filter=".tag-{{ tag.name|slugify }}">{{ tag.name }}</li>
+    {% endfor %}
+  </ul>
+</div>
+<div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+  {% for project in projects %}
+<div class="col-lg-4 col-md-6 portfolio-item {% for tag in project.tags.all %} tag-{{ tag.name|slugify }}{% endfor %}">
+    <div class="portfolio-wrap">
+      {% if project.images.first %}
+      <img src="{{ project.images.first.image.url }}" class="img-fluid" alt="{{ project.title }}"
+        style="height: 30vh; width: 100%; object-fit: contain;" />
+      {% endif %}
+      <div class="portfolio-links">
+        {% if project.images.first %}
+        <a href="{{ project.images.first.image.url }}" data-gallery="portfolioGallery"
+          class="portfolio-lightbox" title="{{ project.title }}"><i class="bx bx-plus"></i></a>
+        {% endif %}
+        <a href="#" data-bs-toggle="modal" data-bs-target="#projectModal{{ forloop.counter }}"
+          title="More Details"><i class="bx bx-link"></i></a>
+        {% if project.github_link %}
+        <a href="{{ project.github_link }}" target="_blank" title="GitHub"><i class="bi bi-github"></i></a>
+        {% endif %}
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal for this project -->
+  <div class="modal fade" id="projectModal{{ forloop.counter }}" tabindex="-1"
+    aria-labelledby="projectModalLabel{{ forloop.counter }}" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="projectModalLabel{{ forloop.counter }}">{{ project.title }}</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-lg-7">
+              <div class="row g-2">
+                {% for image in project.images.all %}
+                <div class="col-6">
+                  <a href="{{ image.image.url }}" class="glightbox">
+                    <img src="{{ image.image.url }}" class="img-fluid rounded" alt="{{ project.title }} image" />
+                  </a>
+                </div>
+                {% endfor %}
+              </div>
+            </div>
+            <div class="col-lg-5">
+              <h6>Description</h6>
+              <p>{{ project.description }}</p>
+              <ul class="list-unstyled">
+                {% if project.github_link %}
+                <li><strong>GitHub:</strong> <a href="{{ project.github_link }}" target="_blank">{{ project.github_link }}</a></li>
+                {% endif %}
+                {% if project.detail_url %}
+                <li><strong>Live Site:</strong> <a href="{{ project.detail_url }}" target="_blank">{{ project.detail_url }}</a></li>
+                {% endif %}
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+</div>
 
 <div class="h-100 d-flex align-items-end justify-content-end py-3">
     <a href="javascript:history.go(-1)" class="btn btn-outline-blue rounded-pill mb-5">Back</a>
 </div>
-
-<svg class="svg-curve" viewBox="0 0 1440 79" xmlns="http://www.w3.org/2000/svg">
-    <path d="M-100 0C-100 0 218.416 55.835 693.5 55.835C1168.58 55.835 1487 0 1487 0V79H-100V0Z"></path>
-</svg>
-
 {% endblock %}
