--- a/templates/index.html
+++ b/templates/index.html
@@ -14,12 +14,12 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700|Raleway:300,400,500,600,700|Poppins:300,400,500,600,700" rel="stylesheet" />
 
-    <link href="{% static 'vendor/aos/aos.css' %}" rel="stylesheet" />
-    <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet" />
-    <link href="{% static 'vendor/boxicons/css/boxicons.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet" />
-    <link href="{% static 'vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet" />
+    <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/glightbox@3.3.0/dist/css/glightbox.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/swiper@11.1.4/swiper-bundle.min.css" rel="stylesheet" />
 
     <link href="{% static 'css/style.css' %}" rel="stylesheet" />
 </head>
@@ -83,8 +83,8 @@
                     <h2>About</h2>
                     <p>
                         Solution-driven, highly organized system analyst with more than 9 years of experience coordinating cross-functional teams in the development, documentation, delivery and production support. Currently I am reskilling with Python, Django, HTML, CSS, JavaScript,
-                        Bootstrap and Databases (MySQL, NoSQL). Greatest strength is business awareness, liaising with senior management and technical experts which facilitates to permanent solutions. I am currently seeking new opportunities and am excited
-                        to tackle challenging problems and grow as a developer.
+                        Bootstrap and Databases (MySQL, NoSQL). Greatest strength is business awareness, liaising with senior management and technical experts which facilitates to permanent solutions. I am currently studying Python for web development and AI, 
+                        seeking new opportunities and am excited to tackle challenging problems and grow as a developer.
                     </p>
                 </div>
 
@@ -128,8 +128,8 @@
                 <div class="section-title">
                     <h2>Skills</h2>
                     <p>
-                        I am proficient in a variety of programming languages including Python, JavaScript. I have experience building full stack web applications using frameworks such as Django , and am comfortable working with front-end technologies such as HTML, CSS and back-end
-                        such as Python. In addition to my experience with web development, I have also completed projects involving data analysis using libraries such as NumPy. I am always looking to expand my skillset and am open to learning new languages
+                        I am proficient in programming languages Python, JavaScript. I have experience building full stack web applications using Django frameworks , and am comfortable working with front-end technologies such as HTML, CSS and back-end
+                        in Python, databases such as MySQL and NoSQL. In addition to my experience with web development, I have also completed projects involving data analysis using Pandas and NumPy. I am always looking to expand my skillset and am open to learning new languages
                         and technologies.
                     </p>
                 </div>
@@ -137,21 +137,27 @@
                 <div class="row skills-content">
                     <div class="col-lg-6" data-aos="fade-up">
                         <div class="progress">
-                            <span class="skill">Python <i class="val">80%</i></span>
+                            <span class="skill">Python <i class="val"></i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">HTML <i class="val">80%</i></span>
+                            <span class="skill">HTML <i class="val"></i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">JavaScript <i class="val">70%</i></span>
+                            <span class="skill">JavaScript <i class="val"></i></span>
+                            <div class="progress-bar-wrap">
+                                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
+                            </div>
+                        </div>
+                        <div class="progress">
+                            <span class="skill">Git, Github<i class="val"></i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
@@ -160,25 +166,27 @@
 
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
                         <div class="progress">
-                            <span class="skill">CSS <i class="val">80%</i></span>
+                            <span class="skill">CSS <i class="val"></i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">BootStrap <i class="val">70%</i></span>
+                            <span class="skill">BootStrap <i class="val"></i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                         <div class="progress">
-                            <span class="skill">Git, Github<i class="val">70%</i></span>
+                            <span class="skill">MySQL/NoSQL <i class="val"></i></span>
                             <div class="progress-bar-wrap">
                                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
+
+                        
                     </div>
                 </div>
             </div>
@@ -208,6 +216,11 @@
                         </div>
 
                         <h3 class="resume-title">Education</h3>
+                        <div class="resume-item">
+                            <h4>Python Developer </h4>
+                            <p><em>Lexicon IT Proffs</em></p>
+                            <p><em>Stockholm, Sweden</em></p>
+                        </div>
                         <div class="resume-item">
                             <h4>Bachelor of Computer Science and Engineering</h4>
                             <p><em>University of Madras</em></p>
@@ -382,14 +395,14 @@
 
     <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
-    <script src="{% static 'vendor/aos/aos.js' %}"></script>
-    <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-    <script src="{% static 'vendor/glightbox/js/glightbox.min.js' %}"></script>
-    <script src="{% static 'vendor/isotope-layout/isotope.pkgd.min.js' %}"></script>
-    <script src="{% static 'vendor/swiper/swiper-bundle.min.js' %}"></script>
-    <script src="{% static 'vendor/typed.js/typed.min.js' %}"></script>
-    <script src="{% static 'vendor/waypoints/noframework.waypoints.js' %}"></script>
-    <script src="{% static 'vendor/php-email-form/validate.js' %}"></script>
+    <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/glightbox@3.3.0/dist/js/glightbox.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11.1.4/swiper-bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12/dist/typed.umd.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/bootstrapmade/php-email-form/validate.js"></script>
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
